--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.9 (not yet released)
+* Windows
+  - fix build failure with SQLite
 
 ver 0.22.8 (2021/05/22)
 * fix crash bug in "albumart" command (0.22.7 regression)
