db/update/Walk: load all .mpdignore files of all parent directories
When updating everything, this did work, but if updating only a
subdirectory, the ".mpdignore" in the parents were not used.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1172

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.9 (not yet released)
+* database
+  - simple: load all .mpdignore files of all parent directories
 * Windows
   - fix build failure with SQLite
 
