--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ ver 0.22.9 (not yet released)
 * database
   - simple: load all .mpdignore files of all parent directories
 * decoder
-  - ffmpeg: support the "sort_album" tag
+  - ffmpeg: support the tags "sort_album", "album-sort", "artist-sort"
 * Windows
   - fix build failure with SQLite
 
