--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ ver 0.23 (not yet released)
   - proxy: split search into chunks to avoid exceeding the output buffer
   - upnp: support libnpupnp instead of libupnp
 * decoder
-  - openmt: new plugin
+  - openmpt: new plugin
 * output
   - pipewire: new plugin
   - snapcast: new plugin
