--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ ver 0.22.9 (not yet released)
   - simple: load all .mpdignore files of all parent directories
 * decoder
   - ffmpeg: support the tags "sort_album", "album-sort", "artist-sort"
+  - ffmpeg: fix build failure with FFmpeg 3.4
 * Windows
   - fix build failure with SQLite
 
