--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.22.9 (not yet released)
+ver 0.22.9 (2021/06/23)
 * database
   - simple: load all .mpdignore files of all parent directories
 * tags
