--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ ver 0.22.10 (not yet released)
 * input
   - curl: fix crash bug after stream with Icy metadata was closed by peer
   - tidal: remove defunct unmaintained plugin
+* tags
+  - fix crash caused by bug in TagBuilder and a few potential reference leaks
 
 ver 0.22.9 (2021/06/23)
 * database
