command/file: support "albumart" for virtual tracks in CUE sheets
Instead of checking for "cover.jpg" in the virtual directory
representing the CUE sheet, check its enclosing directory.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1206

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.22.10 (not yet released)
+* protocol
+  - support "albumart" for virtual tracks in CUE sheets
 
 ver 0.22.9 (2021/06/23)
 * database
