--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -8,4 +8,5 @@
   <string name="toggle_button_run_off">MPD is not running</string>
   <string name="checkbox_run_on_boot">Run MPD automatically on boot</string>
   <string name="checkbox_wakelock">Prevent suspend when MPD is running (Wakelock)</string>
+  <string name="checkbox_pause_on_headphones_disconnect">Pause MPD when headphones disconnect</string>
 </resources>
