--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.22.10 (not yet released)
   - simple: fix crash bug
 * input
   - curl: fix crash bug after stream with Icy metadata was closed by peer
+  - tidal: remove defunct unmaintained plugin
 
 ver 0.22.9 (2021/06/23)
 * database
