output/oss: always enable PcmExport for alsa_channel_order
We need this even when AFMT_S24_PACKED is not available, for the
correct channel order in multi-channel files.  Internally, MPD uses
FLAC channel order, but OSS uses the same channel order as ALSA.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ ver 0.22.10 (not yet released)
   - tidal: remove defunct unmaintained plugin
 * tags
   - fix crash caused by bug in TagBuilder and a few potential reference leaks
+* output
+  - oss: fix channel order of multi-channel files
 
 ver 0.22.9 (2021/06/23)
 * database
