mixer/alsa: use cached values to work around rounding errors
This replaces 967af603270246f1c97e11b8bad6a0eb65c81318 with a more
effective workaround.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/822

--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@ ver 0.22.10 (not yet released)
 * output
   - httpd: fix missing tag after seeking into a new song
   - oss: fix channel order of multi-channel files
+* mixer
+  - alsa: fix yet more rounding errors
 
 ver 0.22.9 (2021/06/23)
 * database
