filter/ffmpeg: automatically retry with "aformat"
If DetectFilterOutputFormat() fails to determine the output format,
insert an "aformat" filter which attempts to force a specific output
format.

Fixes part 2 of of https://github.com/MusicPlayerDaemon/MPD/issues/1235

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ ver 0.22.11 (not yet released)
   - fix "albumart" crash
 * filter
   - ffmpeg: pass "channel_layout" instead of "channels" to buffersrc
+  - ffmpeg: fix "av_buffersink_get_frame() failed: Resource temporarily unavailable"
 * Android
   - build with NDK r23
 
