filter/ffmpeg: support double-precision samples
Insert an "aformat" filter which converts double-precision to
single-precision.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1235

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ver 0.22.11 (not yet released)
 * filter
   - ffmpeg: pass "channel_layout" instead of "channels" to buffersrc
   - ffmpeg: fix "av_buffersink_get_frame() failed: Resource temporarily unavailable"
+  - ffmpeg: support double-precision samples (by converting to single precision)
 * Android
   - build with NDK r23
 
