command/QueueCommands: reimplement relative "move"/"moveid" offsets
The existing implementation has been utterly broken forever; I cannot
explain what it actually does, but it doesn't do what the
documentation says.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ ver 0.23 (not yet released)
   - show the audio format in "playlistinfo"
   - support "listfiles" with arbitrary storage plugins
   - support relative positions in "addid"
+  - fix relative positions in "move" and "moveid"
 * database
   - proxy: require MPD 0.20 or later
   - proxy: require libmpdclient 2.11 or later
