player/CrossFade: do not cross-fade songs shorter than 20 seconds
From the feature request: "I generally like to have crossfade on, but
when it happens during such short tracks (e.g. 20 seconds or less) it
doesn't really sound good as those tracks are not really meant to be
crossfaded and intended to act as a bridge on their own."

Sounds reasonable.  This commit doesn't add an option, but hard-codes
the limit to 20 seconds.  If it turns out that users want to have it
configurable, we can still add the option.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1184

--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,8 @@ ver 0.23 (not yet released)
 * decoder
   - openmpt: new plugin
   - wavpack: fix WVC file support
+* player
+  - do not cross-fade songs shorter than 20 seconds
 * output
   - oss: support DSD over PCM
   - pipewire: new plugin
