--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.1 (not yet released)
+* protocol
+  - use decimal notation instead of scientific notation
 * output
   - pipewire: attempt to change the graph sample rate
   - snapcast: fix time stamp bug which caused "Failed to get chunk"
