--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.2 (not yet released)
+* output
+  - pipewire: send artist and title to PipeWire
 * neighbor
   - mention failed plugin name in error message
 * fix crash with libfmt versions older than 7
