--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ ver 0.23.2 (not yet released)
   - pipewire: DSD support
 * neighbor
   - mention failed plugin name in error message
+* player
+  - fix cross-fade regression
 * fix crash with libfmt versions older than 7
 
 ver 0.23.1 (2021/10/19)
