--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 ver 0.23.3 (not yet released)
 * protocol
-  - add optional position parameter to "add"
+  - add optional position parameter to "add" and "playlistadd"
 * output
   - alsa: add option "stop_dsd_silence" to work around DSD DAC noise
 * macOS: fix libfmt related build failure
