--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ ver 0.23.3 (not yet released)
   - add optional position parameter to "add" and "playlistadd"
   - allow range in "playlistdelete"
 * database
+  - fix scanning files with question mark in the name
   - inotify: fix use-after-free bug
 * output
   - alsa: add option "stop_dsd_silence" to work around DSD DAC noise
