--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 ver 0.23.4 (not yet released)
+* output
+  - alsa: add option "thesycon_dsd_workaround" to work around device bug
 * fix crash or debug builds if startup fails
+* Windows
+  - enable the "openmpt" decoder plugin
 
 ver 0.23.3 (2021/10/31)
 * protocol
