command/database: add optional position parameter to "searchaddpl"
Closes https://github.com/MusicPlayerDaemon/MPD/issues/1328

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.4 (not yet released)
+* protocol
+  - add optional position parameter to "searchaddpl"
 * decoder
   - ffmpeg: support libavcodec 59
 * output
