--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.5 (not yet released)
+* protocol
+  - fix "searchaddpl" bug (bogus error "Bad position")
 * migrate to PCRE2
 * GCC 12 build fixes
 
