--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ ver 0.23.5 (not yet released)
 * protocol
   - support relative offsets for "searchadd"
   - fix "searchaddpl" bug (bogus error "Bad position")
+* database
+  - upnp: fix crash bug
 * migrate to PCRE2
 * GCC 12 build fixes
 
