--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.23.5 (not yet released)
+ver 0.23.5 (2021/12/01)
 * protocol
   - support relative offsets for "searchadd"
   - fix "searchaddpl" bug (bogus error "Bad position")
