--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 ver 0.24 (not yet released)
 * protocol
-  - "playlistfind"/"playlistsearch" have a "window" parameter
+  - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
 * player
   - add option "mixramp_analyzer" to scan MixRamp tags on-the-fly
 * tags
