WasapiOutputPlugin pause bug fix
Wasapi output plugin won't start playing after being paused

The cause is that the scope guard in the WASAPI work thread
(WasapiOutputPlugin.cxx, function WasapiOutputThread::Work(), in the
while (true) loop) is set up too 'late' in the execution. There is one
condition ("if (data_in_frames >= buffer_size_in_frames)") when it is
hit, the loop will continue without executing the scope guard. This
scope guard is responsible for emptying the buffer again, and if the
buffer is not emptied, the above mentioned condition will stay true.

Closes https://github.com/MusicPlayerDaemon/MPD/issues/1451

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ ver 0.23.6 (not yet released)
   - opus: fix "readpicture" on Opus files
 * output
   - pipewire: fix crash bug if setting volume before playback starts
+  - wasapi: fix resume after pause
 
 ver 0.23.5 (2021/12/01)
 * protocol
