--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.23.6 (not yet released)
+* protocol
+  - support filename "cover.webp" for "albumart" command
 * decoder
   - ffmpeg: fix end-of-file check (update stuck at empty files)
   - opus: fix "readpicture" on Opus files
