--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 ver 0.23.6 (not yet released)
 * decoder
+  - ffmpeg: fix end-of-file check (update stuck at empty files)
   - opus: fix "readpicture" on Opus files
 * output
   - pipewire: fix crash bug if setting volume before playback starts
