--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-ver 0.23.6 (not yet released)
+ver 0.23.6 (2022/03/14)
 * protocol
   - support filename "cover.webp" for "albumart" command
   - support "readcomments" and "readpicture" on CUE tracks
