--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ ver 0.24.4 (not yet released)
 * decoder
   - mpg123: support Icy stream tags
   - mpg123: use libid3tag to parse stream tags
+* tags
+  - id3: fix assertion failure with broken AIFF/RIFF ID3 chunks
 * output
   - alsa: fix compiler warning with alsa-lib 1.2.14
 
