--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.5 (not yet released)
+* decoder
+  - ffmpeg: handle "*.aif" files
 * output
   - pipewire: fix resuming playback after it was paused by "single" mode
 
