--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.5 (not yet released)
+* database
+  - fix disappearing playlist files
 * decoder
   - ffmpeg: handle "*.aif" files
   - mpg123: add option "full_scan"
