--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ ver 0.24.5 (not yet released)
   - ffmpeg: handle "*.aif" files
   - mpg123: add option "full_scan"
   - mpg123: support seeking on remote files
+  - sidplay: add support for PSID files
 * output
   - pipewire: fix resuming playback after it was paused by "single" mode
 
