--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 ver 0.24.6 (not yet released)
+* decoder
+  - mpg123: another workaround for libmpg123 ID3 corruption bug
 
 ver 0.24.5 (2025/07/31)
 * database
