--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 ver 0.24.6 (not yet released)
 * decoder
   - mpg123: another workaround for libmpg123 ID3 corruption bug
+  - opus: fix seeking in files with large OpusTags
 
 ver 0.24.5 (2025/07/31)
 * database
